--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,117 +1,8 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-        <a class="navbar-brand" href="#">Minha App Angular</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
-        <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                <a class="nav-link" href="#">Produtos</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#">Sobre</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#">Contato</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#">Recursos</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-  </nav>
-  
+<app-menu></app-menu>
 
-  <header class="py-5 mb-5 bg-primary">
-    <div class="container h-100">
-        <div class="row h-100 align-items-center">
-            <div class="col-lg-2">
-                <img class="mw-100" src="assets/angular.png" alt="angular">
-            </div>
-            <div class="col-lg-10">
-              <h1 class="display-4 text-white mt-5 mb-2">Desenvolvimento SPA com angular</h1>
-              <p class="lead mb-5 text-white"> Você está pronto para aprender muito sobre este fantástico framework SPA ?</p>
-            </div>
-        </div>
-    </div>
-  </header>
+<app-home></app-home>
 
-  <main>
-
-
-    <div class="container main-container">
-        <div class="row text-center">
-
-            <div class="col-lg-3 col-md-6 mb-4">
-                <div class="card h-100">
-                    <img class="card-img-top" src=".../100px180/?text=Image cap" height="164px" width="253px" alt="Imagem de capa do card">
-                        <div class="card-body">
-                        <h4 class="card-tittle">Opa rei</h4>  
-                        <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card
-                            tudo certo te amo liusadasdasdasdasdasdsdsdsadasdsdadsdsadad.</p>
-                    </div>
-                    <div class="card-footer">
-                        <a href="#" class="btn btn-primary">Saiba mais</a>
-                    </div>
-                 </div>
-            </div>
-
-
-            <div class="col-lg-3 col-md-6 mb-4">
-                <div class="card h-100">
-                    <img class="card-img-top" src=".../100px180/?text=Image cap" height="164px" width="253px" alt="Imagem de capa do card">
-                    <div class="card-body">
-                        <h4 class="card-tittle">Opa rei</h4>  
-                        <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
-                    </div>
-                    <div class="card-footer">
-                        <a href="#" class="btn btn-primary">Saiba mais</a>
-                    </div>
-                 </div>
-            </div>
-
-
-            <div class="col-lg-3 md-6 mb-4">
-                <div class="card h-100">
-                <img class="card-img-top" src=".../100px180/?text=Image cap" height="164px" width="253px" alt="Imagem de capa do card">
-                    <div class="card-body">
-                        <h4 class="card-tittle">Opa rei</h4>  
-                        <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
-                    </div>
-                    <div class="card-footer">
-                        <a href="#" class="btn btn-primary">Saiba mais</a>
-                    </div>
-                 </div>
-            </div>
-
-
-            <div class="col-lg-3 col-md-6 mb-4">
-                <div class="card h-100">
-                <img class="card-img-top" src=".../100px180/?text=Image cap" height="164px" width="253px" alt="Imagem de capa do card">
-                    <div class="card-body">
-                        <h4 class="card-tittle">Opa rei</h4>  
-                        <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
-                    </div>
-                    <div class="card-footer">
-                        <a href="#" class="btn btn-primary">Saiba mais</a>
-                    </div>
-                 </div>
-            </div>
-
-
-        </div>
-    </div>
-  </main>
-
-  <footer class="footer bg-dark fixed-bottom">
-    <div>
-      <p class="text-white" style="padding-top: 10px;">Minha App Angular - desenvolvedor.io</p>
-    </div>
-  </footer>
-
-
+<app-footer></app-footer>
 
 
 
