--- a/src/app/navegacao/home/home.component.html
+++ b/src/app/navegacao/home/home.component.html
@@ -20,10 +20,10 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card h-100">
-                    <img class="card-img-top" src=".../100px180/?text=Image cap" height="164px" width="253px" alt="Imagem de capa do card">
+                    <img class="card-img-top" src="assets/Angula.png" height="164px" width="253px" alt="Imagem de capa do card">
                         <div class="card-body">
-                        <h4 class="card-tittle">Exemplo</h4>  
-                        <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
+                        <h4 class="card-tittle">Framework</h4>  
+                        <p class="card-text">O Angular é um framework utilizado para a criação de Single-Page Applications (SPA), que é uma aplicação web consumida em uma única página.</p>
                     </div>
                     <div class="card-footer">
                         <a href="#" class="btn btn-primary">Saiba mais</a>
@@ -34,12 +34,12 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card h-100">
-                    <img class="card-img-top" src=".../100px180/?text=Image cap" height="164px" width="253px" alt="Imagem de capa do card">
-                    <div class="card-body">
-                        <h4 class="card-tittle">Exemplo</h4>  
-                        <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
-                    </div>
-                    <div class="card-footer">
+                     <img class="card-img-top" src="assets/Angula.png" height="164px" width="253px" alt="Imagem de capa do card">
+                        <div class="card-body">
+                            <h4 class="card-tittle">TypeScript</h4>  
+                            <p class="card-text">Ao desenvolver uma aplicação Angular é preciso utilizar TypeScript, que é um superset de JavaScript, e que, ao ser compilada, devolve um arquivo em JavaScript.</p>
+                        </div>
+                        <div class="card-footer">
                         <a href="#" class="btn btn-primary">Saiba mais</a>
                     </div>
                  </div>
@@ -48,10 +48,10 @@
 
             <div class="col-lg-3 md-6 mb-4">
                 <div class="card h-100">
-                <img class="card-img-top" src=".../100px180/?text=Image cap" height="164px" width="253px" alt="Imagem de capa do card">
+                <img class="card-img-top" src="assets/Angula.png" height="164px" width="253px" alt="Imagem de capa do card">
                     <div class="card-body">
-                        <h4 class="card-tittle">Exemplo</h4>  
-                        <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
+                        <h4 class="card-tittle">Objeto orientado</h4>  
+                        <p class="card-text">O TypeScript facilita o desenvolvimento no padrão de Object Oriented Programming (OOP), ou seja, a programação orientada a objeto.</p>
                     </div>
                     <div class="card-footer">
                         <a href="#" class="btn btn-primary">Saiba mais</a>
@@ -62,10 +62,10 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card h-100">
-                <img class="card-img-top" src=".../100px180/?text=Image cap" height="164px" width="253px" alt="Imagem de capa do card">
+                <img class="card-img-top" src="assets/Angula.png" height="164px" width="253px" alt="Imagem de capa do card">
                     <div class="card-body">
-                        <h4 class="card-tittle">Exemplo</h4>  
-                        <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
+                        <h4 class="card-tittle">Router</h4>  
+                        <p class="card-text">Um dos principais componentes do Angular é o Router. Trata-se de uma biblioteca necessária para permitir a navegação em uma aplicação sem a necessidade de recarregar a página.</p>
                     </div>
                     <div class="card-footer">
                         <a href="#" class="btn btn-primary">Saiba mais</a>
