--- a/src/app/navegacao/menu/menu.component.html
+++ b/src/app/navegacao/menu/menu.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top ">
     <div class="container">
         <a class="navbar-brand" [routerLink]= "['/home']" >Minha App Angular</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
@@ -16,10 +16,10 @@
                 <a class="nav-link" [routerLink]= "['/contato']" >Contato</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" >Recursos</a>
+                <a class="nav-link" [routerLink]= "['/features']" >Recursos</a>
                 </li>
             </ul>
         </div>
-    </div>
+    </div> 
   </nav>
   
